# rbadata

./: .bumpversion.cfg  .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  pyproject.toml
.github/: RELEASE.md
.github/workflows/: publish.yml  release.yml  tests.yml
examples/: 01_basic_usage.py  02_data_browsing.py  05_chart_pack.py  06_snapshots.py  08_glossary.py
rbadata/: __init__.py
rbapy/: __init__.py  alerts.py  browse.py  calculator.py  cash_rate.py  chart_pack.py  config.py  core.py  download.py  exceptions.py  forecasts.py  glossary.py  snapshots.py  tidy.py  utils.py  web_scraper.py
rbapy/examples/: 03_forecasts.py  04_inflation_calculator.py  07_alerts.py  09_advanced_usage.py  10_data_analysis.py  README.md
scripts/: generate_coverage_badge.py
tests/: test_alerts.py  test_browse.py  test_calculator.py  test_cash_rate.py  test_chart_pack.py  test_core.py  test_data.py  test_download.py  test_forecasts.py  test_glossary.py  test_snapshots.py  test_tidy.py  test_utils.py  test_web_scraper.py
